fix javascript call

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,11 @@
 
     <script>
         (async function () {
-            const response = await fetch('api/message');
-            const message = await response.json();
+            let response = await fetch(`api/message`);
+            let message = await response.json();
 
             document.querySelector('#message').innerHTML = message.text
-        })
+        })();
     </script>
 </body>
 </html>
